--- a/templates/search.html
+++ b/templates/search.html
@@ -10,13 +10,18 @@
         <input type="text" name="index" value={% if args["index"] %} "{{ args["index"] }}" {% else %} "law" {% endif %}>
         <br>
         Search type
-        <input type="text" name="doc_type" value={% if args["doc_type"] %} "{{ args["doc_type"] }}" {% else %} "small_data" {% endif %}>
+        <input type="text" name="doc_type" value={% if args["doc_type"] %} "{{ args["doc_type"] }}" {% else %} "small_data" {% endif %} >
         <br>
         Search content
         <input type="text" name="content" {% if content %} value = "{{ content }}" {% endif %}>
         <br>
-        <input type="radio" name="type" value="title" {% if args["type"] != 'content' %}checked {% endif %}>Title
+        <input type="radio" name="type" value="Title" {% if args["type"] == 'Title' %}checked {% endif %}>Title
         <input type="radio" name="type" value="content" {% if args["type"] == 'content' %} checked {% endif %}> Content
+        <input type="radio" name="type" value="DSRXX" {% if args["type"] == 'DSRXX' %} checked {% endif %}> DSRXX
+        <input type="radio" name="type" value="AJJBQK" {% if args["type"] == 'AJJBQK' %} checked {% endif %}> AJJBQK
+        <input type="radio" name="type" value="PJJG" {% if args["type"] == 'PJJG' %} checked {% endif %}> PJJG
+        <input type="radio" name="type" value="SSJL" {% if args["type"] == 'SSJL' %} checked {% endif %}> SSJL
+        <input type="radio" name="type" value="WBSB" {% if args["type"] == 'WBSB' %} checked {% endif %}> WBSB
         <br>
         From <input type="number" name="from_year" placeholder="year" {% if args["from_year"] %} value={{ args["from_year"] }} {% endif %}> -
         <input type="number" name="from_month" placeholder="month" {% if args["from_month"] %} value={{ args["from_month"] }} {% endif %}> -
@@ -36,6 +41,8 @@
     {% if result %}
         {% for data in result %}
             <a href="/doc?index=law&doc_type=small_data&id={{ data["id"] }}"  target="_blank"> {{ data["title"] }}</a>
+            <button action="{{ click(data["id"],1) }}">Good</button>
+            <button action="{{ click(data["id"],0) }}">Bad</button>
             <br>
         {% endfor %}
     {% endif %}
