--- a/templates/search_new.html
+++ b/templates/search_new.html
@@ -57,7 +57,7 @@
             <option value="7" {% if args["type_of_doc"] and args["type_of_doc"] == "7" %}selected{% endif %}>答复</option>
             <option value="8" {% if args["type_of_doc"] and args["type_of_doc"] == "8" %}selected{% endif %}>函</option>
             <option value="9" {% if args["type_of_doc"] and args["type_of_doc"] == "9" %}selected{% endif %}>令</option>
-            <option value="10" {% if args["type_of_doc"] and args["type_of_doc"] == "10" %}selected{% endif %}其他</option>
+            <option value="10" {% if args["type_of_doc"] and args["type_of_doc"] == "10" %}selected{% endif %}>其他</option>
         </select>
         <br>
 
