--- a/templates/search_new.html
+++ b/templates/search_new.html
@@ -127,7 +127,7 @@
 
     {% if result %}
         {% for data in result %}
-            <a href="/doc?index=law&doc_type=small_data&id={{ data["id"] }}"  target="_blank"> {{ data["title"] }}</a>
+            <a href="/doc?index={{ args["index"] }}&doc_type={{ args["doc_type"] }}&id={{ data["id"] }}"  target="_blank"> {{ data["title"] }}</a>
             <button {% if click %}action="{{ click(data["id"],1) }}"{% endif %}>Good</button>
             <button {% if click %}action="{{ click(data["id"],0) }}"{% endif %}>Bad</button>
             <br>
