--- a/templates/news.html
+++ b/templates/news.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h1>{% if Title %}{{ Title }}{% endif %}</h1>
+    <a href="http://wenshu.court.gov.cn/content/content?DocID={{ origin }}" target="_blank?">Click me</a>
     <p>{% if PubDate %}{{ PubDate }}{% endif %}</p>
     <p>{% if content %}{{ content }}{% endif %}</p>
 </body>
