--- a/templates/search_new.html
+++ b/templates/search_new.html
@@ -3,6 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Search</title>
+    <script type="text/javascript">
+            function click(id,score,query){
+                variable=new XMLHttpRequest();
+                xmlhttp.open("GET","/adddata?id=" + id + "&score=" + score + "&query=" + query)
+            }
+
+    </script>
 </head>
 <body>
     <form>
@@ -131,8 +138,12 @@
     {% if result %}
         {% for data in result %}
             <a href="/doc?index={{ args["index"] }}&doc_type={{ args["doc_type"] }}&id={{ data["id"] }}"  target="_blank"> {{ data["title"] }}</a>
-            <button {% if click %}action="{{ click(data["id"],1) }}"{% endif %}>Good</button>
-            <button {% if click %}action="{{ click(data["id"],0) }}"{% endif %}>Bad</button>
+            <button action="{{ click(data["id"],5) }}"{% endif %}>Perfect</button>
+            <button action="{{ click(data["id"],4) }}"{% endif %}>Excellent</button>
+            <button action="{{ click(data["id"],3) }}"{% endif %}>Good</button>
+            <button action="{{ click(data["id"],2) }}"{% endif %}>Fair</button>
+            <button action="{{ click(data["id"],1) }}"{% endif %}>Bad</button>
+            <button action="{{ click(data["id"],0) }}"{% endif %}>Negative</button>
             <br>
         {% endfor %}
     {% endif %}
