--- a/templates/search_new.html
+++ b/templates/search_new.html
@@ -16,11 +16,11 @@
 <body>
     <form>
         数据集:
-        <input type="text" name="index" {% if args["index"] %} value="{{ args["index"] }}" {% else %} value="law" {% endif %}>
+        <input type="text" name="index" {% if args["index"] %} value="law" {% else %} value="law" {% endif %} readonly="readonly">
         <br>
 
         数据类型:
-        <input type="text" name="doc_type" {% if args["doc_type"] %} value="{{ args["doc_type"] }}" {% else %} value="small_data" {% endif %} >
+        <input type="text" name="doc_type" {% if args["doc_type"] %} value="big_data" {% else %} value="big_data" {% endif %} readonly="readonly">
         <br>
 
         全文检索:
