--- a/templates/search_new.html
+++ b/templates/search_new.html
@@ -11,7 +11,7 @@
                 data["query"]=query;
                 data["score"]=score;
                 xmlhttp = new XMLHttpRequest();
-                xmlhttp.open("post","/adddata",true);
+                xmlhttp.open("post","adddata",true);
                 xmlhttp.send(data);
             }
 
