--- a/templates/search_new.html
+++ b/templates/search_new.html
@@ -7,9 +7,9 @@
             function clicked(id,score,query){
 				console.log(id)
                 var data = new FormData();
-				dataa.append("id",id);
+				data.append("id",id);
                 data.append("query",query);
-                data("score",score);
+                data.append("score",score);
                 xmlhttp = new XMLHttpRequest();
                 xmlhttp.open("post","adddata",true);
                 xmlhttp.send(data);
