--- a/application/templates/main.html
+++ b/application/templates/main.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <!-- saved from url=(0028)http://162.243.120.148:5000/ -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    
-    <title>幂律智能</title>
-    <link href="static/css/normalize.css" rel="stylesheet">
-    <link href="static/css/powerlaw.css" rel="stylesheet">
-    <link href="static/css/css" rel="stylesheet">
-    <script src="static/js/jquery-3.2.1.min.js"></script>
-    <script src="static/js/powerlaw.js"></script>
+    <title>幂律智能gg</title>
+    <link href="{{ url_for('static', filename='css/normalize.css') }}" rel="stylesheet">
+    <link href="{{ url_for("static", filename="css/powerlaw.css") }}" rel="stylesheet">
+    <link href="{{ url_for("static", filename="css/css") }}" rel="stylesheet">
+    <script src="{{ url_for("static", filename="js/jquery-3.2.1.min.js") }}"></script>
+    <script src="{{ url_for("static", filename="js/powerlaw.js") }}"></script>
 <style>#haloword-pron { background: url(chrome-extension://bhkcehpnnlgncpnefpanachijmhikocj/img/icon.svg) -94px -34px; }#haloword-pron:hover { background: url(chrome-extension://bhkcehpnnlgncpnefpanachijmhikocj/img/icon.svg) -111px -34px; }#haloword-open { background: url(chrome-extension://bhkcehpnnlgncpnefpanachijmhikocj/img/icon.svg) -94px -17px; }#haloword-open:hover { background: url(chrome-extension://bhkcehpnnlgncpnefpanachijmhikocj/img/icon.svg) -111px -17px; }#haloword-close { background: url(chrome-extension://bhkcehpnnlgncpnefpanachijmhikocj/img/icon.svg) -94px 0; }#haloword-close:hover { background: url(chrome-extension://bhkcehpnnlgncpnefpanachijmhikocj/img/icon.svg) -111px 0; }#haloword-add { background: url(chrome-extension://bhkcehpnnlgncpnefpanachijmhikocj/img/icon.svg) -94px -51px; }#haloword-add:hover { background: url(chrome-extension://bhkcehpnnlgncpnefpanachijmhikocj/img/icon.svg) -111px -51px; }#haloword-remove { background: url(chrome-extension://bhkcehpnnlgncpnefpanachijmhikocj/img/icon.svg) -94px -68px; }#haloword-remove:hover { background: url(chrome-extension://bhkcehpnnlgncpnefpanachijmhikocj/img/icon.svg) -111px -68px; }</style></head>
 <body>
 
 <div id="wrapper">
     <div id="main" class="search">
     
-        <div id="title"><img width="300" src="/static/image/logo.png"></div>
+        <div id="title"><img width="300" src="{{ url_for("static", filename="image/logo.png") }}"></div>
         <div id="search">
             <textarea id="search-input" onkeyup="textarea_auto_grow(this);" maxlength="500"></textarea>
             <button id="search-button" class="light">搜索</button>
