--- a/application/templates/main.html
+++ b/application/templates/main.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- saved from url=(0028)http://162.243.120.148:5000/ -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>幂律智能gg</title>
+    <title>幂律智能</title>
     <link href="{{ url_for('static', filename='css/normalize.css') }}" rel="stylesheet">
     <link href="{{ url_for("static", filename="css/powerlaw.css") }}" rel="stylesheet">
     <link href="{{ url_for("static", filename="css/css") }}" rel="stylesheet">
