--- a/application/templates/search_new.html
+++ b/application/templates/search_new.html
@@ -50,10 +50,7 @@
 <form method="post">
     模型:
     <select name="type_of_model">
-        <option value="-2" {% if args["type_of_model"] and args["type_of_model"] == "-2" %}selected{% endif %}>Origin</option>
-        <option value="-1" {% if (args["type_of_model"] and args["type_of_model"] == "-1") or not("type_of_model" in args) %}selected{% endif %}>
-            DBDT
-        </option>
+        <option value="-2" {% if args["type_of_model"] and args["type_of_model"] == "-2"  or not("type_of_model" in args)%}selected{% endif %}>Origin</option>
         <option value="0" {% if args["type_of_model"] and args["type_of_model"] == "0" %}selected{% endif %}>LDA</option>
         <option value="1" {% if args["type_of_model"] and args["type_of_model"] == "1" %}selected{% endif %}>tfidf</option>
         <option value="2" {% if args["type_of_model"] and args["type_of_model"] == "2" %}selected{% endif %}>word embedding</option>
@@ -94,6 +91,18 @@
         </option>
     </select>
     <br>
+
+    EXPAND_K
+    <input type="number" name="EXPAND_K" {% if args["EXPAND_K"] %}
+           value="{{ args["EXPAND_K"] }}" {% else %} value="1"{% endif %}>
+    EXPAND_ALPHA
+    <input type="number" name="EXPAND_ALPHA" {% if args["EXPAND_ALPHA"] %}
+           value="{{ args["EXPAND_ALPHA"] }}" {% else %} value="0.8"{% endif %}>
+    EXPAND_RATIO
+    <input type="number" name="RATIO1" {% if args["RATIO1"] %}
+           value="{{ args["RATIO1"] }}" {% else %} value="8"{% endif %}>
+    <input type="number" name="RATIO2" {% if args["RATIO2"] %}
+           value="{{ args["RATIO2"] }}" {% else %} value="0"{% endif %}>
 
     <input type="submit" value="Search">
 </form>
