--- a/application/templates/search_new.html
+++ b/application/templates/search_new.html
@@ -51,7 +51,7 @@
     模型:
     <select name="type_of_model">
         <option value="-2" {% if args["type_of_model"] and args["type_of_model"] == "-2"  or not("type_of_model" in args)%}selected{% endif %}>Origin</option>
-        <option value="0" {% if args["type_of_model"] and args["type_of_model"] == "-1" %}selected{% endif %}>Merged</option>
+        <option value="-1" {% if args["type_of_model"] and args["type_of_model"] == "-1" %}selected{% endif %}>Merged</option>
         <option value="0" {% if args["type_of_model"] and args["type_of_model"] == "0" %}selected{% endif %}>LDA</option>
         <option value="1" {% if args["type_of_model"] and args["type_of_model"] == "1" %}selected{% endif %}>tfidf</option>
         <option value="2" {% if args["type_of_model"] and args["type_of_model"] == "2" %}selected{% endif %}>word embedding</option>
@@ -97,32 +97,36 @@
     <input type="number" name="EXPAND_K" {% if args["EXPAND_K"] %}
            value="{{ args["EXPAND_K"] }}" {% else %} value="1"{% endif %}><br>
     EXPAND_ALPHA
-    <input type="number" name="EXPAND_ALPHA" {% if args["EXPAND_ALPHA"] %}
+    <input type="text" name="EXPAND_ALPHA" {% if args["EXPAND_ALPHA"] %}
            value="{{ args["EXPAND_ALPHA"] }}" {% else %} value="0.8"{% endif %}><br>
     EXPAND_RATIO
-    <input type="number" name="RATIO1" {% if args["RATIO1"] %}
+    <input type="text" name="RATIO1" {% if args["RATIO1"] %}
            value="{{ args["RATIO1"] }}" {% else %} value="8"{% endif %}>
-    <input type="number" name="RATIO2" {% if args["RATIO2"] %}
+    <input type="text" name="RATIO2" {% if args["RATIO2"] %}
            value="{{ args["RATIO2"] }}" {% else %} value="0"{% endif %}><br>
 
     LDA
-    <input type="number" name="" {% if args["LDA"] %}
+    <input type="text" name="LDA" {% if args["LDA"] %}
            value="{{ args["LDA"] }}" {% else %} value="0"{% endif %}><br>
     TFIDF
-    <input type="number" name="" {% if args["TFIDF"] %}
+    <input type="text" name="TFiDF" {% if args["TFIDF"] %}
            value="{{ args["TFIDF"] }}" {% else %} value="0"{% endif %}><br>
 
     WORD embedding
-    <input type="number" name="" {% if args["WORD embedding"] %}
+    <input type="text" name="WORD embedding" {% if args["WORD embedding"] %}
            value="{{ args["WORD embedding"] }}" {% else %} value="0"{% endif %}><br>
 
     LSTM
-    <input type="number" name="" {% if args["LSTM"] %}
+    <input type="text" name="LSTM" {% if args["LSTM"] %}
            value="{{ args["LSTM"] }}" {% else %} value="0"{% endif %}><br>
 
     CNN
-    <input type="number" name="" {% if args["CNN"] %}
+    <input type="text" name="CNN" {% if args["CNN"] %}
            value="{{ args["CNN"] }}" {% else %} value="0"{% endif %}><br>
+
+    Title
+    <input type="text" name="title_ratio" {% if args["title_ratio"] %}
+           value="{{ args["title_ratio"] }}" {% else %} value="0.4"{% endif %}><br>
 
     <input type="submit" value="Search">
 </form>
