--- a/application/templates/search_new.html
+++ b/application/templates/search_new.html
@@ -109,7 +109,7 @@
     <input type="text" name="LDA" {% if args["LDA"] %}
            value="{{ args["LDA"] }}" {% else %} value="0"{% endif %}><br>
     TFIDF
-    <input type="text" name="TFiDF" {% if args["TFIDF"] %}
+    <input type="text" name="TFIDF" {% if args["TFIDF"] %}
            value="{{ args["TFIDF"] }}" {% else %} value="0"{% endif %}><br>
 
     WORD embedding
